<resources>
    <string name="app_name">Movie Catalogue</string>
    <string-array name="judul_movie">
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Robin Hood</item>
        <item>Joker </item>
        <item>Terminator: Dark Fate </item>
        <item>Maleficent: Mistress of Evil </item>
        <item>Zombieland: Double Tap </item>
        <item>The Lion King </item>
        <item>Ip Man 4: The Finale </item>
        <item>Fast and Furious Presents: Hobbs and Shaw </item>
        <item>Dark Phoenix </item>
        <item>Aquaman </item>
        <item>Bumblebee </item>
        <item>Venom </item>
    </string-array>
    <string-array name="deskripsi_movie">
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson (Kingpin) Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>During the 1980s, a failed stand-up comedian is driven insane and turns to a life of crime and chaos in Gotham City while becoming an infamous psychopathic crime figure.</item>
        <item>More than two decades have passed since Sarah Connor prevented Judgment Day, changed the future, and re-wrote the fate of the human race. Dani Ramos is living a simple life in Mexico City with her brother and father when a highly advanced and deadly new Terminator – a Rev-9 – travels back through time to hunt and kill her. Dani\s survival depends on her joining forces with two warriors: Grace, an enhanced super-soldier from the future, and a battle-hardened Sarah Connor. As the Rev-9 ruthlessly destroys everything and everyone in its path on the hunt for Dani, the three are led to a T-800 from Sarah’s past that may be their last best hope.</item>
        <item>Maleficent and her goddaughter Aurora begin to question the complex family ties that bind them as they are pulled in different directions by impending nuptials, unexpected allies, and dark new forces at play.</item>
        <item>Columbus, Tallahassee, Wichita, and Little Rock move to the American heartland as they face off against evolved zombies, fellow survivors, and the growing pains of the snarky makeshift family.</item>
        <item>Simba idolises his father, King Mufasa, and takes to heart his own royal destiny. But not everyone in the kingdom celebrates the new cubs arrival. Scar, Mufasas brother—and former heir to the throne—has plans of his own. The battle for Pride Rock is ravaged with betrayal, tragedy and drama, ultimately resulting in Simbas exile. With help from a curious pair of newfound friends, Simba will have to figure out how to grow up and take back what is rightfully his.</item>
        <item>Ip Man 4 is an upcoming Hong Kong biographical martial arts film directed by Wilson Yip and produced by Raymond Wong. It is the fourth in the Ip Man film series based on the life of the Wing Chun grandmaster of the same name and features Donnie Yen reprising the role. The film began production in April 2018 and ended in July the same year.</item>
        <item>Ever since US Diplomatic Security Service Agent Hobbs and lawless outcast Shaw first faced off, they just have swapped smacks and bad words. But when cyber-genetically enhanced anarchist Brixtons ruthless actions threaten the future of humanity, both join forces to defeat him. (A spin-off of “The Fate of the Furious,” focusing on Johnsons Luke Hobbs and Stathams Deckard Shaw.)</item>
        <item>The X-Men face their most formidable and powerful foe when one of their own, Jean Grey, starts to spiral out of control. During a rescue mission in outer space, Jean is nearly killed when shes hit by a mysterious cosmic force. Once she returns home, this force not only makes her infinitely more powerful, but far more unstable. The X-Men must now band together to save her soul and battle aliens that want to use Greys new abilities to rule the galaxy.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="score_movie">
        <item>77</item>
        <item>84</item>
        <item>58</item>
        <item>85</item>
        <item>66</item>
        <item>72</item>
        <item>74</item>
        <item>71</item>
        <item>NR</item>
        <item>65</item>
        <item>61</item>
        <item>68</item>
        <item>68</item>
        <item>66</item>
    </string-array>
    <string-array name="tahun_movie">
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>
    <string-array name="judul_tv">
        <item>Arrow</item>
        <item>The Flash</item>
        <item>The Simpsons</item>
        <item>Supernatural</item>
        <item>Family Guy</item>
        <item>NCIS: Los Angeles</item>
        <item>Fear the Walking Dead</item>
        <item>Inuyashiki: Last Hero</item>
        <item>The Good Doctor</item>
        <item>Batwoman</item>
        <item>The Blacklist</item>
        <item>Rick and Morty</item>
    </string-array>
    <string name="display" translatable="false">Display</string>
    <string name="btn_kembali" translatable="false">Kembali</string>
    <string name="year" translatable="false">Year</string>
    <string name="score" translatable="false">Score Viewer</string>
    <string name="movie" translatable="false">Movie</string>
    <string name="no_data">Tidak Ada Data</string>
</resources>